assets/css/_search.scss
/**
 * Site Search Boxes
 * -----------------------------------------------------------------------------
 * @category   Stylesheet
 * @package    Sheepie
 * @author     Mark Grealish <mark@bhalash.com>
 * @copyright  Copyright (c) 2015 Mark Grealish
 * @license    https://www.gnu.org/copyleft/gpl.html The GNU GPL v3.0
 * @version    3.0
 * @link       https://github.com/bhalash/sheepie
 */

/**
 * Big Search Form Container
 * -----------------------------------------------------------------------------
 */

#bigsearch {
    background: palette(rmwb);
    box-sizing: border-box;
    height: 100vh;
    height: $navbar-height-full;
    opacity: 0;
    transition: opacity .15s;
    visibility: hidden;
    z-index: 3;
    @include content-size;
    @include fixed(auto 0 0 auto);

    &.show {
        opacity: 1;
        visibility: visible;
    }

    &:focus {
        outline: none;
    }

    @include navbar-size-1024 {
        @include padding(1);
    }
}

/**
 * Big Search Form
 * -----------------------------------------------------------------------------
 */

.bigsearch-form {
    // Important for absoute centering.
    height: 100%;

    fieldset {
        height: 100%;
        position: relative;
        width: 100%;
    }
}

/**
 * Big Search Text Input
 * -----------------------------------------------------------------------------
 */

.bigsearch-input {
    background: transparent;
    color: palette(white, x-light);
    display: block;
    margin: 0 auto;
    text-align: center;
    width: 90%;
    @include font-size(7);
    @include absolute-center;

    @include placeholder-style {
        color: rgba(palette(white, x-light), 0.5);
    }

    @include media($b-1024) {
        box-sizing: border-box;
        @include font-size(2);
    }
}

/**
 * Regular Search Form
 * -----------------------------------------------------------------------------
 */

.searchform-input {
    @include padding(1);
    @include font-size(2.7);
    width: 100%;
}

/**
 * Big Search Toggle Buttons
 * -----------------------------------------------------------------------------
 */

.toggle {
    /* I found buttons don't position properly unless floated, so eh.
     * There is an invisible non-padding, non-margin space applied above
     * the button unless it was floated. 
     */

    -webkit-appearance: button;
    background: transparent;
    cursor: pointer;
    margin:0;
    opacity: 0.5;
    padding: 0;
    @include size(4 4);

    &:active {
        opacity: 1;
    }

    @include media($b-1024) {
        opacity: 1;
        @include absolute(0 0, top right);
        // Button size is increased to present a better touch target.
        @include size(6 6);
    }
}

// Nav row open/close toggle.

#navrow-search-toggle {
}

// Big search open/close toggle.

#bigsearch-search-toggle {
    display: none;

    @include media($b-1024) {
        display: initial;
    }
}

/* The icon is separate for reasons of size:
 * The parent button grows in size on smaller screens to be a better touch
 * target. */

.toggle-icon {
    display: block;
    margin: 0 auto;

    @include social(100% 1, null, search close) {
        background-color: transparent;
    }

    @include media($b-1024) {
        @include square-flex(40px 1);
    }
}

